@@ -1,3 +1,5 @@
+* Fixed valid() operation to properly use valid_min/valid_max attribute values.
+
 * Update to GEOMS MWR and S5P L2 product ingestions.
 
 1.7 2019-06-06
